# coronavirus-tg-api

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  docker-compose.yml  nginx_config.conf  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  send_to_teams.sh  tasks.py  telegram_notification.sh  uvicorn.Dockerfile
.github/workflows/: pythonapp.yml
app/: __init__.py  main.py  models.py
app/config/: settings.py
app/routers/: __init__.py  v1.py
app/services/: __init__.py  covidgouvtg.py
app/utils/: httputils.py
tests/: __init__.py  conftest.py  test_covidgouvtg.py  test_routes.py
