[project]
name = "coronavirus-tg-api"
version = "1.0.0"
description = "API for tracking the global coronavirus (COVID-19, SARS-CoV-2) outbreak in Togo"
authors = [
    "https://github.com/egbakou/"
]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/egbakou/coronavirus-tg-api"
repository = "https://github.com/egbakou/coronavirus-tg-api"
documentation = "https://github.com/egbakou/coronavirus-tg-api"

classifiers = [
    "Topic :: Software Development"
]

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | virtualenv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
known_third_party = "invoke,pkg_resources"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 120
